--- a/plugin.xml
+++ b/plugin.xml
@@ -5,5 +5,6 @@
     <license>Apache 2.0</license>
     <keywords>cordova,live reload, livereload,browsersync,browser-sync</keywords>
     <repo>git@github.com:webnuts/cordova-livereload.git</repo>
-    <hook type="before_run" src="lib/plugin.js" />
+    <hook type="before_run" src="lib/before-run.js" />
+    <hook type="before_run" src="lib/after-run.js" />
 </plugin>
